--- a/index.html
+++ b/index.html
@@ -17,12 +17,12 @@
     <link href="css/table.css" rel="stylesheet">
     <link href="css/navigation.css" rel="stylesheet">
     <link href="css/article.css" rel="stylesheet">
+    <link href="css/footer.css" rel="stylesheet">
     <script defer src="js/script.js">
     </script>
 </head>
 
 <body class="body">
-    <div class="container"></div>
     <header claas="header">
         <h1 class="header__tittle">
             Bydgoszcz - miasto województwa <br>kujawsko-pomorskiego
@@ -321,8 +321,9 @@
             </article>
         </article>
     </main>
-
-    </div>
+    <footer class="footer">
+        <p> Bydgoszcz 2023</p>
+    </footer>
 </body>
 
 </html>
